src/objects/Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Object_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapping Object</label>
        <referenceTo>Mapping_Object__c</referenceTo>
        <relationshipLabel>Field Mappings</relationshipLabel>
        <relationshipName>FieldsMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Field_API_Name__c</fullName>
        <label>Source Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field_Label__c</fullName>
        <label>Source Field Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field_Required__c</fullName>
        <label>Source Field Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field_Type__c</fullName>
        <label>Source Field Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Is_Name_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Is Name Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Field_API_Name__c</fullName>
        <label>Target Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Label__c</fullName>
        <label>Target Field Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Required__c</fullName>
        <label>Target Field Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Type__c</fullName>
        <label>Target Field Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Is_Name_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Is Name Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Field Mapping</label>
    <nameField>
        <label>Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>